examples/test/testpolicy7700.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7700
  namespace: namespace101
spec:
  podSelector:
    matchLabels:
      key30: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value29
          key1: value0
      podSelector:
        matchLabels:
          key11: value48
          key1: value11
